correct pytest workflow

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -30,4 +30,4 @@ jobs:
           poetry add -D pytest
       - name: Test with pytest
         run: |
-          poetry run test
+          poetry run pytest -m
